# translategemma-api

./: .gitignore  README.md  pyproject.toml
app/: main.py  server.py
app/api/: routes.py
app/core/: config.py
app/model/: generator.py  loader.py
